<?xml version="1.0"?>
<package format="3">
  <name>image_processing_pkg</name>
  <version>0.0.1</version>
  <description>ROS2 package for image processing and object detection</description>
  <maintainer email="adefr011@gmail.com">turtle</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  
  <depend>torch</depend>
  <depend>torchvision</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
